commit on master

--- a/portfolio/config.json
+++ b/portfolio/config.json
@@ -1,9 +1,9 @@
 {
   "title": "Fisayo Olashore",
   "description": "Creative Agency",
-  "logo": "/upload/Backgorund Paper Texture_v2 copy.png",
+  "logo": "/upload/BackgroundPaperTexture_v2copy.png",
   "footer": "Ⓒ Fisayo",
-  "favicon": "/upload/Backgorund Paper Texture_v2 copy.png",
+  "favicon": "/upload/BackgroundPaperTexture_v2copy.png",
   "navigation": [
     {
       "text": "FISAYO.",
