commit on master

--- a/portfolio/config.json
+++ b/portfolio/config.json
@@ -18,7 +18,7 @@
       "external": true
     },
     {
-      "text": "Say Hi",
+      "text": "Connect",
       "desc": "for work",
       "link": "mailto:fisayo.olashore@gmail.com",
       "position": "right",
