--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Fisayo",
   "license": "MIT",
   "dependencies": {
+    "iphone-inline-video": "^2.2.2",
     "vuepress": "^1.2.0",
     "webpack-dev-middleware": "3.6.0"
   }
