commit on master

--- a/portfolio/config.json
+++ b/portfolio/config.json
@@ -13,7 +13,7 @@
     },
     {
       "text": "Instagram",
-      "link": "https://www.instagram.com/conceptsfromf.o",
+      "link": "https://www.instagram.com/f.oconcepts",
       "position": "right",
       "external": true
     },
