commit on master

--- a/portfolio/config.json
+++ b/portfolio/config.json
@@ -13,7 +13,7 @@
     },
     {
       "text": "Instagram",
-      "link": "https://www.instagram.com/f.isayo",
+      "link": "https://www.instagram.com/oluwafisayo.o",
       "position": "right",
       "external": true
     },
