commit on master

--- a/portfolio/config.json
+++ b/portfolio/config.json
@@ -12,7 +12,7 @@
 			"external": false
 		},
 		{
-			"text": "CONNECT",
+			"text": "Connect",
 			"desc": "for work",
 			"link": "mailto:oluwafisayo.o@protonmail.com",
 			"position": "right",
